--- a/src/index.css
+++ b/src/index.css
@@ -59,23 +59,52 @@ webview {
 
 .wrapper {
     flex: 1;
-    align-items: center;
+    align-items: stretch;
     justify-content: center;
     -webkit-app-region: drag;
 }
 
-#top-text {
-    padding: 10px 20px;
-    font-size: 80%;
-    font-weight: 200;
-}
 .button {
-    padding: 10px 20px;
+    padding: 20px 30px;
     cursor: pointer;
+    font-size: 30px;
+    font-weight: 200;
     -webkit-app-region: no-drag;
+    transition: background-color .2s ease;
+    flex-shrink: 0;
 }
 .button:hover {
-    background-color: #fff;
+    background-color: #ccc;
+}
+
+#buttons {
+    background-color: white;
+    flex: 1;
+    padding-top: 20px;
+    overflow: auto;
+}
+
+.events {
+    padding: 0 20px;
+}
+
+.welcome {
+    display: flex;
+    flex-direction: row;
+    padding-left: 80px;
+    padding-right: 5px;
+    align-items: center;
+    font-size: 14px;
+    height: 25px;
+}
+
+#user-name {
+    font-weight: bold;
+    margin-right: 5px;
+}
+
+.row {
+    display: block;
 }
 
 .loading {
